# ODE-DSN-code-and-data

./: README.md
shark/: Makefile  README.md  testroot
shark/doc/: config.yml  sqa_reports.yml
shark/doc/content/: index.md
shark/examples/RO-FRP/: 28-1727201711-6.4716160636325775.msh  micro.i
shark/examples/UD-FRP/: micro.i  randomFiber-3d.msh  run.sh
shark/examples/UD-FRP/Outputs/: 2.csv
shark/include/actions/: AverageSmallStressStrainPPAction.h
shark/include/base/: sharkApp.h
shark/include/materials/: ComputeSmallJ2PlasticityStress.h
shark/include/materials/ANN/: ODEGRUSmallAStress.h
shark/include/materials/hardening_models/: CowperSymonds.h  HardeningModel.h  JohnsonCook.h  JohnsonCookNoTemp.h  LinearHardening.h
shark/include/utils/: SharkUtils.h
shark/scripts/: random_path.py  random_series.py
shark/src/: main.C
shark/src/actions/: AverageSmallStressStrainPPAction.C
shark/src/base/: sharkApp.C
shark/src/materials/: ComputeSmallJ2PlasticityStress.C
shark/src/utils/: SharkUtils.C
shark/unit/: Makefile  run_tests
shark/unit/src/: main.C
train/: CMakeLists.txt  README.md  configure.json  optim_module.cpp  test-astress.cpp  test-loss.cpp  test-stress.cpp  train-astress.cpp  train-stress.cpp
train/include/: AStressTrainer.h  CSVDataHandler.h  ReduceLROnPlateau.h  StressTrainer.h  TimestampedSequenceDataset.h  Trainer.h  Utils.h
train/netmodels/include/: GRUaStress.h  ODEGRUCell.h  Tools.h
train/scripts/: optim_parameters.py
train/src/: CSVDataHandler.cpp  TimestampedSequenceDataset.cpp  Utils.cpp
(+15 files in other folders)
